# ros-robot-experiments

./: .gitignore  README.md
djf_ros_class_ws/src/my_class_pkg/scripts/: ros_action_server.py  ros_client.py  ros_publisher_node.py  ros_server.py  ros_subscriber_node.py
djf_ros_class_ws/src/my_class_pkg/src/: msg_subscriber.cpp  ros_action_client.cpp  ros_subscriber.cpp
ros_class_ws_dqqself/src/my_class_pkg/: CMakeLists.txt
ros_class_ws_dqqself/src/my_class_pkg/scripts/: .ros_subscriber_node.py.swp  ros_publisher_node.py  ros_subscriber_node.py
ros_class_ws_dqqself/src/my_class_pkg/src/: move_1m_square_odom.cpp  ros_publisher.cpp  ros_subscriber.cpp
src/my_class_pkg/: CMakeLists.txt  package.xml
src/my_class_pkg/scripts/: ros_action_client.py
src/my_class_pkg/src/: msg_publisher.cpp  ros_action_server.cpp  ros_client.cpp  ros_publisher.cpp  ros_server.cpp
